--- a/_config.yml
+++ b/_config.yml
@@ -64,15 +64,15 @@ lsi: false
 quiet: false
 excerpt_separator: "\n\n"
 permalink: /:year/:month/:day/:title/
-gems:
-    # - jekyll-github-metadata
+plugins:
+    - jekyll-github-metadata
     - rouge
 #     - jekyll-html-pipeline
-    # - jekyll-paginate
-    # - jekyll-sitemap
+    - jekyll-paginate
+    - jekyll-sitemap
     - jekyll-feed
     # - jemoji
-#     - jekyll-mentions
+    # - jekyll-mentions
 collections:
     wiki:
         output: true
